[gd_scene load_steps=5 format=3 uid="uid://hero_profile_screen"]

[ext_resource type="Script" path="res://src/ui/HeroProfileScreen.gd" id="1_script"]
[ext_resource type="PackedScene" uid="uid://top_hud" path="res://src/ui/TopHUD.tscn" id="2_hud"]
[ext_resource type="PackedScene" uid="uid://bqe6er2xuyggx" path="res://src/ui/TaskListHUD.tscn" id="3_task"]
[ext_resource type="PackedScene" uid="uid://bottom_hud" path="res://src/ui/BottomHUD.tscn" id="4_nav"]

[node name="HeroProfileScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_script")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.05, 0.05, 0.08, 1)

[node name="TopHUD" parent="." instance=ExtResource("2_hud")]
layout_mode = 1

[node name="TaskListHUD" parent="." instance=ExtResource("3_task")]
layout_mode = 1

[node name="BottomHUD" parent="." instance=ExtResource("4_nav")]
layout_mode = 1

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 100.0
offset_bottom = -100.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="HeroName" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Hero Name"
horizontal_alignment = 1

[node name="StatsLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Stats..."
horizontal_alignment = 1

[node name="TraitsList" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1